[workspace]
members = [
  "client",
  "command_line",
  "driver",
  "integration_tests",
  "protocol",
  "relay_server",
]
exclude = [
  "bindings/node",
  "bindings/webassembly",
  "conformance/signers/node-cggmp/template",
  "conformance/signers/webassembly-cggmp/template"
]
resolver = "2"

# [patch.crates-io]
# crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint.git", rev = "b85c162ab2dda726b54ec4a48de8fa0019296c74" }
