[workspace]
members = [
  "client",
  "command_line",
  "driver",
  "integration_tests",
  "protocol",
  "relay_server",
]
exclude = [
  "bindings/node",
  "bindings/webassembly",
  "conformance/signers/node-cggmp/template",
  "conformance/signers/webassembly-cggmp/template"
]
resolver = "2"

[workspace.dependencies]
mpc-client = { version = "0.7", path = "client" }
mpc-driver = { version = "0.7", path = "driver" }
mpc-protocol = { version = "0.7", path = "protocol", features = ["zlib"] }

thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519 = { version = "2.2.3" }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
frost-ed25519 = { version = "2" }
synedrion = { version = "0.2.0" }
k256 = { version = "0.13", default-features = false, features = ["pem", "serde", "std"] }
# enable `std` feature for error conversion
bip32 = { version = "0.5", features = ["std"] }
rand = "0.8"
sha3 = "0.10"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
snow = "0.9.6"
pem = "3"
http = "1"
log = "0.4"
binary-stream = { version = "9", features = ["async"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = { version = "0.4", features = ["serde"] }
flate2 = "1.0.30"
async-stream = "0.3"
tracing = "0.1"
