[workspace]
members = [
  "crates/bindings/node",
  "crates/bindings/webassembly",
  "crates/client",
  "crates/command_line",
  "crates/driver",
  "integration_tests",
  "crates/meeting_server",
  "crates/polysig",
  "crates/protocol",
  "crates/relay_server", 
]
exclude = [
  "conformance/signers/node-cggmp/template",
  "conformance/signers/webassembly-cggmp/template"
]
resolver = "2"

[workspace.dependencies]
polysig-client = { version = "0.8", path = "crates/client" }
polysig-driver = { version = "0.8", path = "crates/driver" }
polysig-protocol = { version = "0.8", path = "crates/protocol", features = ["zlib"] }
polysig-meeting-server = { version = "0.8", path = "crates/meeting_server" }
polysig-relay-server = { version = "0.8", path = "crates/relay_server" }

anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519 = { version = "2.2.3" }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
frost-core = { version = "2" }
frost-ed25519 = { version = "2" }
synedrion = { version = "0.2.0" }
k256 = { version = "0.13", default-features = false, features = ["pem", "serde", "std"] }
# enable `std` feature for error conversion
bip32 = { version = "0.5", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
async-trait = "0.1"
futures = "0.3"
snow = "0.9.6"
pem = "3"
http = "1"
log = "0.4"
binary-stream = { version = "9", features = ["async"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = { version = "0.4", features = ["serde"] }
flate2 = "1.0.30"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
url = { version = "2", features = ["serde"] }
toml = "0.8"
axum = { version = "0.7", features = ["ws"] }
axum-macros = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
tokio-tungstenite = "0.23"
clap = { version = "4", features = ["derive", "wrap_help", "env"] }

# webassembly
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
tracing-subscriber-wasm = { version = "0.1" }
js-sys = "0.3"
wasm-log = "0.3"

[workspace.dependencies.web-sys]
version = "0.3"
features = [
  "BinaryType",
  "ErrorEvent",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
