[package]
name = "mpc-bindings"
version = "0.4.0"
edition = "2021"
description = "Webassembly bindings to drive multi-party computation protocols"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mpc-driver = { path = "../driver", features = ["gg20", "cggmp"] }
mpc-protocol = { path = "../protocol" }
mpc-client = { path = "../client" }

mpc-ecdsa-getrandom-hack = "*"
getrandom = {version = "0.1.16", features = ["wasm-bindgen"]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen-futures = "0.4"
rand = { version="0.6.5", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
wasm-log = "0.3"
futures = "0.3"
