[package]
name = "mpc-bindings"
version = "0.7.0"
edition = "2021"
description = "Webassembly bindings to drive multi-party computation protocols"

[features]
tracing = [
  "dep:tracing",
  "dep:tracing-subscriber", 
  "dep:tracing-subscriber-wasm"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mpc-driver = { path = "../driver", features = ["cggmp"] }
mpc-protocol = { path = "../protocol" }
mpc-client = { path = "../client" }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
rand = "0.8"
console_error_panic_hook = "0.1"
log = "0.4"
futures = "0.3"
serde_json = "1"
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }

tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing-subscriber-wasm = { version = "0.1", optional = true }
