[package]
name = "mpc-relay-client"
version = "0.1.0"
edition = "2021"
description = "Noise protocol websocket relay client for MPC/TSS applications"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0"

[features]
default = ["native"]
native = []
web = []

[dependencies]
mpc-relay-protocol = { path = "../protocol" }
thiserror = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net"] }
tokio-tungstenite = "0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync", "macros"] }
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
log = "0.4"
wasm-log = "0.3"
#fastsink = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

[dev-dependencies]
anyhow = "1"

[build-dependencies]
rustc_version = "0.4.0"
