[package]
name = "mpc-client"
version = "0.7.0"
edition = "2021"
description = "Noise protocol websocket relay client for MPC/TSS applications"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mpc-sdk/framework"

[dependencies]
mpc-protocol = { version = "0.7", path = "../protocol", features = ["zlib"] }
#mpc-protocol = "0.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net"] }
tokio-tungstenite = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync", "macros"] }
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
log = "0.4"
wasm-log = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "BinaryType",
  "ErrorEvent",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

[dev-dependencies]
anyhow = "1"
