[package]
name = "mpc-client"
version = "0.7.0"
edition = "2021"
description = "Noise protocol websocket relay client for MPC/TSS applications"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mpc-sdk/framework"

[features]
default = ["full"]
full = ["signers", "protocols"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519"]
cggmp = ["mpc-driver/cggmp"]
ecdsa = ["mpc-driver/ecdsa"]
eddsa = ["mpc-driver/eddsa"]
schnorr = ["mpc-driver/schnorr"]
frost-ed25519 = ["mpc-driver/frost-ed25519"]

[dependencies]
mpc-protocol.workspace = true
mpc-driver.workspace = true
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net"] }
tokio-tungstenite = "0.23"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync", "macros"] }
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
log = "0.4"
wasm-log = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "BinaryType",
  "ErrorEvent",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

[dev-dependencies]
anyhow = "1"
