[package]
name = "mpc-driver"
version = "0.7.0"
edition = "2021"
description = "Driver for multisig threshold protocols"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0 OR AGPL-3.0"
repository = "https://github.com/mpc-sdk/framework"

[features]
default = ["full"]
full = ["signers", "protocols"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519"]
cggmp = ["k256", "synedrion", "bip32"]
ecdsa = ["k256/ecdsa"]
eddsa = ["ed25519", "ed25519-dalek"]
frost-ed25519 = ["dep:frost-ed25519", "ed25519-dalek"]
schnorr = ["ed25519", "k256/schnorr"]

[dependencies]
mpc-protocol.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519 = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
frost-ed25519 = { workspace = true, optional = true }
synedrion = { workspace = true, optional = true }
k256 = { workspace = true, optional = true }
sha3.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
bip32 = { workspace = true, optional = true }
rand.workspace = true
tokio = { version = "1", features = ["sync"] }

# WASM

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
wasm-bindgen = { version = "0.2" }

[build-dependencies]
rustc_version = "0.4.1"

[package.metadata.docs.rs]
all-features = true
