[package]
name = "polysig-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
cggmp = ["mpc-driver/cggmp"]
ecdsa = ["mpc-driver/ecdsa"]
eddsa = ["mpc-driver/eddsa"]
schnorr = ["mpc-driver/schnorr"]
frost-ed25519 = ["mpc-driver/frost-ed25519"]

[dev-dependencies]
mpc-client= { path = "../client" }
mpc-driver = { path = "../driver" }
mpc-protocol = { version = "0.7", path = "../protocol" }
mpc-relay-server = { version = "0.7", path = "../relay_server" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-stream = "0.1"
log = "0.4"
sha2 = "0.10"
sha3 = "0.10"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
rand = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util" ] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
hex = "0.4"
csv = "1"
