[package]
name = "polysig-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["full"]
full = ["signers", "protocols"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519"]
cggmp = ["mpc-driver/cggmp"]
ecdsa = ["mpc-driver/ecdsa"]
eddsa = ["mpc-driver/eddsa"]
schnorr = ["mpc-driver/schnorr"]
frost-ed25519 = ["mpc-driver/frost-ed25519"]

[dev-dependencies]
ed25519-dalek.workspace = true
mpc-client.workspace = true
mpc-driver.workspace = true
mpc-protocol.workspace = true
mpc-relay-server.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true 
futures.workspace = true
tokio-stream.workspace = true
log.workspace = true
sha2.workspace = true
sha3.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
hex.workspace = true
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util" ] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
csv = "1"
