[package]
name = "polysig-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["full"]
full = ["signers", "protocols"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519"]
cggmp = ["polysig-driver/cggmp"]
ecdsa = ["polysig-driver/ecdsa"]
eddsa = ["polysig-driver/eddsa"]
schnorr = ["polysig-driver/schnorr"]
frost-ed25519 = ["frost", "polysig-driver/frost-ed25519"]
frost = []

[dev-dependencies]
ed25519-dalek.workspace = true
polysig-client.workspace = true
polysig-driver.workspace = true
polysig-protocol.workspace = true
polysig-relay-server.workspace = true
polysig-meeting-server.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true 
futures.workspace = true
tokio-stream.workspace = true
log.workspace = true
sha2.workspace = true
sha3.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
hex.workspace = true
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util" ] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
csv = "1"
