[package]
name = "mpc-relay-protocol"
version = "0.2.0"
edition = "2021"
description = "Protocol layer for the MPC/TSS relay using the noise framework"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tmpfs/mpc-relay"

[dependencies]
thiserror = "1"
snow = "0.9.2"
binary-stream = { version = "8.1", features = ["async"] }
async-trait = "0.1"
futures = "0.3"
pem = "2"
uuid = { version = "1", features = ["v4"] }
http = "0.2"
hex = { version = "0.4", features = ["serde"] }

[dev-dependencies]
anyhow = "1"
#tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros" ] }
