[package]
name = "mpc-protocol"
version = "0.5.0"
edition = "2021"
description = "Multi-party computation framework using the noise protocol for end-to-end encryption"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mpc-sdk/framework"

[features]
zlib = ["dep:flate2"]

[dependencies]
thiserror = "1"
snow = "0.9.2"
binary-stream = { version = "8.1", features = ["async"] }
async-trait = "0.1"
futures = "0.3"
pem = "3"
uuid = { version = "1", features = ["v4", "serde"] }
http = "0.2"
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
flate2 = { version = "1", features = ["zlib"], optional = true }

[dev-dependencies]
anyhow = "1"
#tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros" ] }
