[package]
name = "mpc-protocol"
version = "0.7.0"
edition = "2021"
description = "Multi-party computation framework using the noise protocol for end-to-end encryption"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mpc-sdk/framework"

[features]
zlib = ["dep:flate2"]

[dependencies]
thiserror = "1"
snow = "0.9.6"
async-trait = "0.1"
futures = "0.3"
pem = "3"
http = "1"
log = "0.4"
binary-stream = { version = "9", features = ["async"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = { version = "1.0.30", optional = true }

[dev-dependencies]
anyhow = "1"
