[package]
name = "mpc-relay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
snow = "0.9.2"
binary-stream = "8"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.7"
url = { version = "2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pem = "2"

axum = { version = "0.6", features = ["headers", "ws"] }
axum-macros = "0.3"
axum-server = { version = "0.5", features = ["tls-rustls"] }
#tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["full"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
anyhow = "1"
