[package]
name = "mpc-relay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
snow = "0.9.2"
binary-stream = { version = "8", features = ["async"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.7"
url = { version = "2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pem = "2"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
hex = { version = "0.4", features = ["serde"] }
futures = "0.3"
http = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.6", features = ["headers", "ws"] }
axum-macros = "0.3"
axum-server = { version = "0.5", features = ["tls-rustls"] }
tower-http = { version = "0.4", features = ["full"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.18"
async-stream = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync", "macros"] }
getrandom = {version = "0.2", features = ["js"]}

[dev-dependencies]
anyhow = "1"

[build-dependencies]
rustc_version = "0.4.0"
