[package]
name = "mpc-relay-server"
version = "0.7.0"
edition = "2021"
description = "Noise protocol websocket relay server for MPC/TSS applications"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mpc-sdk/framework"

[dependencies]
mpc-protocol.workspace = true
thiserror.workspace = true
binary-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-stream.workspace = true
url.workspace = true
toml.workspace = true
axum.workspace = true
axum-macros.workspace = true
axum-server.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
anyhow.workspace = true
