[package]
name = "mpc-relay-server"
version = "0.5.0"
edition = "2021"
description = "Noise protocol websocket relay server for MPC/TSS applications"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mpc-sdk/framework"

[dependencies]
mpc-protocol = { path = "../protocol", features = ["zlib"] }
#mpc-protocol = "0.4"
thiserror = "1"
binary-stream = { version = "8", features = ["async"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
axum = { version = "0.6", features = ["headers", "ws"] }
axum-macros = "0.3"
axum-server = { version = "0.5", features = ["tls-rustls"] }
tower-http = { version = "0.4", features = ["trace"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.20"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
anyhow = "1"
