[package]
name = "mpc-dev-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
mpc-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
axum = { version = "0.7" }
axum-macros = "0.4"
axum-server = { version = "0.6" }
axum-extra = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
sha3 = "0.10"

[[bin]]
name = "dev-server"
path = "src/dev-server.rs"

[[bin]]
name = "gen-e2e"
path = "src/gen-e2e.rs"
