[package]
name = "mpc-node-bindings"
version = "0.7.0"
edition = "2021"
description = "Nodejs bindings to drive multi-party computation protocols"

[features]
cggmp = ["mpc-driver/cggmp"]
ecdsa = ["mpc-driver/ecdsa"]
eddsa = ["mpc-driver/eddsa"]
schnorr = ["mpc-driver/schnorr"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp"]
full = ["cggmp", "ecdsa", "eddsa", "schnorr"]

# tracing = [
#   "dep:tracing",
#   "dep:tracing-subscriber", 
#   "dep:tracing-subscriber-wasm"
# ]

[lib]
crate-type = ["cdylib"]

[dependencies]
mpc-driver = { path = "../../driver" }
napi = { version = "3.0.0-alpha.16", features = ["anyhow", "serde-json"]}
napi-derive = "3.0.0-alpha.15"
anyhow = "1"
serde_json = "1"
# mpc-protocol = { path = "../../protocol" }
# mpc-client = { path = "../../client" }
# rand = "0.8"
# log = "0.4"
# futures = "0.3"
# serde_json = "1"
# getrandom = {version = "0.2", features = ["js"]}
# serde = { version = "1", features = ["derive"] }

# tracing = { version = "0.1", optional = true }
# tracing-subscriber = { version = "0.3", optional = true }
# tracing-subscriber-wasm = { version = "0.1", optional = true }

[build-dependencies]
napi-build = "1"
