[package]
name = "mpc-node-bindings"
version = "0.7.0"
edition = "2021"
description = "Nodejs bindings to drive multi-party computation protocols"
license = "MIT OR APACHE-2.0"
repository = "https://github.com/mpc-sdk/framework"

[features]
default = ["full"]
full = ["signers", "protocols"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519"]
cggmp = [
  "mpc-driver/cggmp",
  "dep:tokio",
  "napi/async",
  "napi/tokio",
  "napi/tokio_rt",
  "serde"
]
ecdsa = ["mpc-driver/ecdsa"]
eddsa = ["mpc-driver/eddsa"]
frost-ed25519 = ["mpc-driver/frost-ed25519", "dep:tokio"]
schnorr = ["mpc-driver/schnorr"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mpc-client.workspace = true
mpc-driver.workspace = true
mpc-protocol.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

napi = { version = "3.0.0-alpha.16", features = ["anyhow", "serde-json", "napi9"]}
napi-derive = "3.0.0-alpha.15"

[build-dependencies]
napi-build = "1"
