[package]
name = "mpc-webassembly-bindings"
version = "0.7.0"
edition = "2021"
description = "Webassembly bindings to drive multi-party computation protocols"

[features]
cggmp = ["mpc-driver/cggmp"]
ecdsa = ["mpc-driver/ecdsa"]
eddsa = ["mpc-driver/eddsa"]
frost-ed25519 = ["mpc-driver/frost-ed25519"]
schnorr = ["mpc-driver/schnorr"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519"]
full = ["signers", "protocols"]

tracing = [
  "dep:tracing",
  "dep:tracing-subscriber", 
  "dep:tracing-subscriber-wasm"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mpc-client = { path = "../../client" }
mpc-driver = { path = "../../driver" }
mpc-protocol = { path = "../../protocol" }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
rand = "0.8"
console_error_panic_hook = "0.1"
log = "0.4"
futures = "0.3"
serde_json = "1"
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }

tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing-subscriber-wasm = { version = "0.1", optional = true }
