[package]
name = "mpc-webassembly-bindings"
version = "0.7.0"
edition = "2021"
description = "Webassembly bindings to drive multi-party computation protocols"

[features]
cggmp = ["mpc-driver/cggmp"]
ecdsa = ["mpc-driver/ecdsa"]
eddsa = ["mpc-driver/eddsa"]
frost-ed25519 = ["mpc-driver/frost-ed25519"]
schnorr = ["mpc-driver/schnorr"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519"]
full = ["signers", "protocols"]

tracing = [
  "dep:tracing",
  "dep:tracing-subscriber", 
  "dep:tracing-subscriber-wasm"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mpc-client.workspace = true
mpc-driver.workspace = true
mpc-protocol.workspace = true
rand.workspace = true
log.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
tracing-subscriber-wasm = { version = "0.1", optional = true }
