[package]
name = "mpc-webassembly-bindings"
version = "0.7.0"
edition = "2021"
description = "Webassembly bindings to drive multi-party computation protocols"

[features]
cggmp = ["mpc-driver/cggmp"]
ecdsa = ["mpc-driver/ecdsa"]
eddsa = ["mpc-driver/eddsa"]
frost-ed25519 = ["mpc-driver/frost-ed25519"]
schnorr = ["mpc-driver/schnorr"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519"]
full = ["signers", "protocols"]

tracing = [
  "dep:tracing",
  "dep:tracing-subscriber", 
  "dep:tracing-subscriber-wasm"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mpc-client.workspace = true
mpc-driver.workspace = true
mpc-protocol.workspace = true
rand.workspace = true
log.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

serde-wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
getrandom.workspace = true
wasm-bindgen.workspace = true
tracing-subscriber-wasm = { workspace = true, optional = true }
