[package]
name = "mpc-client"
version = "0.7.1"
edition = "2021"
description = "Noise protocol websocket relay client for MPC/TSS applications"
keywords = ["mpc", "tss", "relay", "crypto", "e2ee"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mpc-sdk/framework"

[features]
default = ["full"]
full = ["signers", "protocols"]
signers = ["ecdsa", "eddsa", "schnorr"]
protocols = ["cggmp", "frost-ed25519"]
cggmp = ["mpc-driver/cggmp"]
ecdsa = ["mpc-driver/ecdsa"]
eddsa = ["mpc-driver/eddsa"]
schnorr = ["mpc-driver/schnorr"]
frost-ed25519 = ["mpc-driver/frost-ed25519"]

[dependencies]
mpc-protocol.workspace = true
mpc-driver.workspace = true
thiserror.workspace = true
serde.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
log.workspace = true
getrandom.workspace = true
tokio = { version = "1", features = ["sync", "macros"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-log.workspace = true
web-sys.workspace = true
